# chatbot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: intents.json
scripts/: generate_model.py
src/esc_chatbot/: __main__.py  config.py  main.py
src/esc_chatbot/api/: __init__.py  middleware.py  routes.py
src/esc_chatbot/core/: __init__.py  feedback.py  log.py  memory.py  queue.py  security.py  storage.py
src/esc_chatbot/models/: schemas.py
src/esc_chatbot/nlp/: __init__.py  engine.py  intents.py  lang_detect.py  ner.py  preprocess.py  sentiment.py  spell.py
src/esc_chatbot/services/: admin_service.py  chat_service.py  feedback_service.py
tests/: test_api.py  test_entities.py  test_memory.py  test_preprocess.py  test_security.py  test_sentiment.py
