[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chatbot"
version = "1.0.0"
description = "Official ESC Software website chatbot — NLP-powered technical support assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ESC Software", email = "hello@esc-software.com"},
]
keywords = ["nlp", "chatbot", "fastapi", "word2vec", "faiss", "esc-software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "numpy>=1.26",
    "gensim>=4.3",
    "faiss-cpu>=1.7",
    "pydantic>=2.0",
    "deep-translator>=1.11",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://esc-software.com"
Repository = "https://github.com/esc-software/chatbot"
Issues = "https://github.com/esc-software/chatbot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
